# auth-service

./: docker-compose.yml
events/: Dockerfile  main.py  pyproject.toml
events/src/apps/admins/: __init__.py  controllers.py  views.py
events/src/apps/orm_models/: events.py
events/src/apps/users/: __init__.py  controllers.py  orm.py  views.py
events/src/core/: main.py  repository.py  schemas.py
events/src/core/events_repository/: events.txt
events/src/core/helpers/: __init__.py  db_helper.py
events/src/core/models/: event.py
events/src/core/orm_models/: __init__.py  events.py
